--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -1,3 +1,84 @@
-.bg-black {
-    background-color: black;
+/* Global elements styles */
+a {
+  color: darkred;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
+/* Blocks styles */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+  margin: 0 0 .75rem 0;
+  background-color: black;
+}
+
+.content {
+  flex: 1;
+}
+
+footer {
+  color: rgba(255,255,255,.75);
+  background-color: black;
+  margin: .75rem 0 0 0;
+  padding: .75rem 0 0 0;
+}
+
+/* Themes */
+.navbar-ecssweb .navbar-nav .nav-link {
+  padding: .5rem .5rem;
+  color: white;
+}
+
+.navbar-ecssweb .navbar-nav .nav-link:hover {
+  color: white;
+}
+
+.navbar-ecssweb .navbar-nav .nav-link:focus {
+  color: white;
+}
+
+.nav-item:hover {
+  background-color: #d82129;
+  border-radius: .2rem
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: .75rem;
+}
+
+.footer-title {
+  flex-basis: 100%;
+}
+
+.footer-item {
+  margin-right: 1rem;
+  margin-bottom: 0;
+}
+
+.footer-item-icon {
+  font-size: 1.5rem;
+}
+
+.footer-link {
+  color: rgba(255,255,255,.75);
+}
+
+.footer-link-icon {
+  color: rgba(255,255,255,.75);
+}
+
+.footer-link-icon:hover {
+  color: white;
+  text-decoration: none;
 }
