--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -20,10 +20,6 @@ header {
   background-color: black;
 }
 
-.content {
-  flex: 1;
-}
-
 footer {
   color: rgba(255,255,255,.75);
   background-color: black;
@@ -50,6 +46,21 @@ footer {
   border-radius: .2rem
 }
 
+.content {
+  flex: 1;
+}
+
+@media (min-width: 992px) {
+  .footer-container {
+    display: flex;
+  }
+  
+  .footer-social-medias {
+    margin-left: auto;
+    order: 2;
+  }
+}
+
 .footer-list {
   display: flex;
   flex-direction: row;
@@ -59,15 +70,17 @@ footer {
 
 .footer-title {
   flex-basis: 100%;
+  width: 0;
 }
 
 .footer-item {
   margin-right: 1rem;
-  margin-bottom: 0;
+  margin-bottom: .25rem;
 }
 
 .footer-item-icon {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  margin-right: 1.5rem;
 }
 
 .footer-link {
