--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -101,10 +101,10 @@
         <div class="footer-social-medias">
           <dl class="footer-list">
             <dt class="footer-title">Connect with us</dt>
-            <dd class="footer-item footer-item-icon"><a href="https://www.facebook.com/ecss.soton/" class="footer-link-icon" aria-label="ECSS Facebook page"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i></a></dd>
-            <dd class="footer-item footer-item-icon"><a href="https://twitter.com/ecs_society" class="footer-link-icon" aria-label="ECSS Twitter"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i></a></dd>
-            <dd class="footer-item footer-item-icon"><a href="https://www.instagram.com/ecss_soton/" class="footer-link-icon" aria-label="ECSS Instagram"><i class="fab fa-instagram" title="ECSS Instagram" aria-hidden="true"></i></a></dd>
-            <dd class="footer-item footer-item-icon"><a href="https://github.com/ecss-soton" class="footer-link-icon" aria-label="ECSS GitHub"><i class="fab fa-github" title="ECSS GitHub" aria-hidden="true"></i></a></dd>
+            <dd class="footer-item footer-item-icon"><a href="https://www.facebook.com/ecss.soton/" class="footer-link-icon" aria-label="Facebook page"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i></a></dd>
+            <dd class="footer-item footer-item-icon"><a href="https://twitter.com/ecs_society" class="footer-link-icon" aria-label="Twitter"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i></a></dd>
+            <dd class="footer-item footer-item-icon"><a href="https://www.instagram.com/ecss_soton/" class="footer-link-icon" aria-label="Instagram"><i class="fab fa-instagram" title="ECSS Instagram" aria-hidden="true"></i></a></dd>
+            <dd class="footer-item footer-item-icon"><a href="https://github.com/ecss-soton" class="footer-link-icon" aria-label="GitHub"><i class="fab fa-github" title="ECSS GitHub" aria-hidden="true"></i></a></dd>
           </dl>
         </div>
         <div>
@@ -118,7 +118,7 @@
           </dl>
           <dl class="footer-list">
             <dt></dt>
-            <dd class="footer-item"><a href="#" class="footer-link">Site map</a></dd>
+            <dd class="footer-item"><a href="#" class="footer-link">Sitemap</a></dd>
             <dd class="footer-item"><a href="#" class="footer-link">Cookies</a></dd>
             <dd class="footer-item"><a href="#" class="footer-link">Privacy Notice</a></dd>
             <dd class="footer-item"><a href="#" class="footer-link">Copyright Notice</a></dd>
