Change style for sponsors logo and upcoming events on homepage

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -18,13 +18,18 @@
 </section>
 <section>
   <h2 class="text-center">Upcoming Events</h2>
-  <div class="card">
-    <div class="card-header">
-      Example event
-    </div>
-    <div class="card-body">
-      <p>Example event.</p>
-      <a href="#" class="btn btn-ecssweb" aria-label="Learn more about Example event">Learn more about this event</a>
+  <div class="events-cards-home">
+    <div class="card event-card-home">
+      <img class="card-img-top" src="#" alt="Example event">
+      <a href="#">
+        <h5 class="card-header">
+            Example event
+        </h5>
+      </a>
+      <div class="card-body">
+        time<br>
+        location
+      </div>
     </div>
   </div>
   <p>Find out more about our events on <a href="#">our events page</a>.</p>
