--- a/website/static/website/styles/home.css
+++ b/website/static/website/styles/home.css
@@ -5,6 +5,19 @@
   margin: 0 auto;
 }
 
+.events-cards-home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  justify-content: center;
+}
+
+.event-card-home {
+  margin: 1rem;
+  width: 20rem;
+  height: auto;
+}
+
 .sponsors-logos-home {
   display: flex;
   flex-wrap: wrap;
@@ -14,23 +27,25 @@
 .sponsor-link-logo-home {
   width: 15rem;
   height: 5rem;
-  margin: .75rem;
+  margin: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .sponsor-link-logo-home {
     width: 12rem;
     height: 4rem;
+    margin: 4rem;
   }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 767.98px) {
   .sponsor-link-logo-home {
     width: 9rem;
     height: 3rem;
+    margin: 1rem;
   }
 }
 
