Change gold sponsors logo size on homepage

--- a/website/static/website/styles/home.css
+++ b/website/static/website/styles/home.css
@@ -25,8 +25,8 @@
 }
 
 .sponsor-link-logo-home {
-  width: 15rem;
-  height: 5rem;
+  width: 18rem;
+  height: 6rem;
   margin: 5rem;
   display: flex;
   align-items: center;
@@ -35,9 +35,9 @@
 
 @media (max-width: 991.98px) {
   .sponsor-link-logo-home {
-    width: 12rem;
-    height: 4rem;
-    margin: 4rem;
+    width: 15rem;
+    height: 5rem;
+    margin: 3rem;
   }
 }
 
@@ -45,6 +45,14 @@
   .sponsor-link-logo-home {
     width: 9rem;
     height: 3rem;
+    margin: 1rem;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .sponsor-link-logo-home {
+    width: 8.1rem;
+    height: 2.7rem;
     margin: 1rem;
   }
 }
