--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -46,7 +46,7 @@
                   <a class="dropdown-item" href="#">Socials</a>
                   <a class="dropdown-item" href="#">Game Socials</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'website:events_bbq' %}">BBQ</a>
+                  <a class="dropdown-item" href="{% url 'website:events-bbq' %}">BBQ</a>
                 </div>
               </li>
               <li class="nav-item">
