Changes to portal

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -32,13 +32,13 @@
       <li class="list-group-item">
         <ul class="list-unstyled">
           <li>
-            <a href="{% url 'portal:feedback-submit' %}">Submit Feedback</a>
+            <a href="#">Submit Feedback</a>
           </li>
           <li>
-            <a href="{% url 'portal:feedback-view' %}">View Responses</a>
+            <a href="#">View Responses</a>
           </li>
           <li>
-            <a href="{% url 'portal:feedback-respond' %}">Submit Response</a>
+            <a href="#">Submit Response</a>
           </li>
         </ul>
       </li>
@@ -50,14 +50,7 @@
         </ul>
       </li>
       <li class="list-group-item">
-        <ul class="list-unstyled">
-          <li>
-            <a href="#">Manage <em>next</em> URL</a>
-          </li>
-          <li>
-            <a href="#">Audit Log</a>
-          </li>
-        </ul>
+        <a href="#">Admin</a>
       </li>
     </ul>
   </div>
