--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="black">
     
     <link rel="icon" href="{% static 'website/images/favicon.ico' %}">
 
