--- a/feedback/templates/feedback/submit.html
+++ b/feedback/templates/feedback/submit.html
@@ -24,9 +24,11 @@ Submit Feedback - ECSS
     {% for field in submit_form %}
     <div class="form-group">
       {{ field.label_tag }}{{ field }}
+      {% if field.errors %}
       <small class="form-text text-danger">
         {% for err in field.errors %}{{ err }}{% endfor %}
       </small>
+      {% endif %}
     </div>
     {% endfor %}
     <input type="Submit" class="btn btn-ecssweb">
