--- a/feedback/templates/feedback/view.html
+++ b/feedback/templates/feedback/view.html
@@ -7,6 +7,11 @@ View Feedback - ECSS
 {% block portalcontent %}
 <section>
   <h1>Feedback</h1>
+  {% for message in messages %}
+    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+    <div class="alert alert-success">{{ message }}</div>
+    {% endif %}
+  {% endfor %}
   {% if feedbacks %}
   <div class="list-group mb-3">
     {% for feedback in feedbacks %}
