--- a/feedback/templates/feedback/respond.html
+++ b/feedback/templates/feedback/respond.html
@@ -1,7 +1,7 @@
 {% extends 'portal/base.html' %}
 
 {% block title %}
-View Feedback - ECSS
+Respond Feedback - ECSS
 {% endblock %}
 
 {% block portalcontent %}
@@ -25,7 +25,7 @@ View Feedback - ECSS
           </div>
         </div>
       </div>
-      <form method="POST">
+      <form id="respond-form" method="POST">
         {% csrf_token %}
         {% for field in respond_form %}
         <div class="form-group">
@@ -37,9 +37,39 @@ View Feedback - ECSS
           {% endif %}
         </div>
         {% endfor %}
-        <input type="submit" value="Save" class="btn btn-ecssweb">
+        <input id="save-button" name="submit" type="submit" value="Save" class="btn btn-ecssweb">
+        {% if not is_new %}
+        <input id="delete-button" name="submit" type="submit" value="Delete" class="btn btn-ecssweb-light">
+        {% endif %}
+        <a href="{% url 'feedback:view' %}" class="btn">Cancel</a>
       </form>
     </div>
   </div>
 </section>
+{% endblock %}
+
+{% block pagescript %}
+<script>
+  is_bind = false;
+  $("#respond-form").change(function() {
+    if (!is_bind) {
+      $(window).bind('beforeunload', function(){
+        return "Are you sure you want to leave this page, changes you made may not be saved?";
+      });
+    }
+  });
+  $('#save-button').click(function() {
+    $(window).unbind('beforeunload');
+    $("#respond-form").removeAttr('novalidate');
+    $("#respond-form").unbind('submit');
+  });
+  $('#delete-button').click(function() {
+    $(window).unbind('beforeunload');
+    $("#respond-form").unbind('submit');
+    $("#respond-form").attr('novalidate', 'novalidate');
+    $("#respond-form").submit(function() {
+      return confirm("Are you sure you want to delete this response?");
+    });
+  });
+</script>
 {% endblock %}
