--- a/feedback/templates/feedback/view.html
+++ b/feedback/templates/feedback/view.html
@@ -11,6 +11,9 @@ View Feedback - ECSS
     {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
     <div class="alert alert-success">{{ message }}</div>
     {% endif %}
+    {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+    <div class="alert alert-warning">{{ message }}</div>
+    {% endif %}
   {% endfor %}
   {% if not perms.feedback.add_response %}
   <p>Only feedback replied by committee will be shown.</p>
