--- a/feedback/templates/feedback/submit_completed.html
+++ b/feedback/templates/feedback/submit_completed.html
@@ -7,7 +7,11 @@ Submit Feedback - ECSS
 {% block portalcontent %}
 <section>
   <h1>Submit Feedback</h1>
-  <p class="alert alert-success">Your feedback has been successfully submitted and saved anonymously.</p>
+  {% for message in messages %}
+    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+    <p class="alert alert-success">{{ message }}</p>
+    {% endif %}
+  {% endfor %}
   <p>Thanks for your feedback, and it will be looked at by our committee.</p>
 </section>
 {% endblock %}
