--- a/auditlog/templates/auditlog/view.html
+++ b/auditlog/templates/auditlog/view.html
@@ -1,3 +1,16 @@
-{% for auditlog_item in auditlog %}
-<p>{{ auditlog_item }}</p>
-{% endfor %}
+{% extends 'portal/base.html' %}
+
+{% block title %}
+Auditlog - ECSS
+{% endblock %}
+
+{% block portalcontent %}
+<section>
+  <h1>Auditlog</h1>
+  <ul>
+    {% for auditlog_item in auditlog %}
+    <li>{{ auditlog_item }}</li>
+    {% endfor %}
+  </ul>
+</section>
+{% endblock %}
