--- a/feedback/templates/feedback/respond.html
+++ b/feedback/templates/feedback/respond.html
@@ -12,16 +12,21 @@ Respond Feedback - ECSS
       <div class="card mb-3">
         <div class="card-body">
           <p>{{ feedback }}</p>
-          <div class="d-flex">
-            <div>
+          <div class="row">
+            <div class="col-sm-8">
               {% if feedback.category %}
-              <span class="badge badge-light">{{ feedback.category }}</span>
+              <span class="badge badge-primary">{{ feedback.category }}</span>
+              {% endif %}
+              {% if feedback.from_ecs %}
+              <span class="badge badge-secondary">From ECS user</span>
+              {% else %}
+              <span class="badge badge-secondary">From non-ECS user</span>
               {% endif %}
               {% if feedback.committee %}
-              <span class="badge badge-info">Submitted by {{ feedback.committee }}</span>
+              <div class="badge badge-info badge-multline">Submitted by <strong class="username">{{ feedback.committee }}</strong></div>
               {% endif %}
             </div>
-            <small class="text-muted ml-auto">Submitted on {{ feedback.time }}</small>
+            <small class="text-muted ml-auto col-sm-4 text-right">Submitted on {{ feedback.time }}</small>
           </div>
         </div>
       </div>
