Responsive portal nav

--- a/feedback/templates/feedback/respond.html
+++ b/feedback/templates/feedback/respond.html
@@ -54,6 +54,7 @@ Respond Feedback - ECSS
 {% endblock %}
 
 {% block pagescript %}
+{{ block.super }}
 <script>
   is_bind = false;
   $("#respond-form").change(function() {
