--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -11,14 +11,25 @@
 {% block content %}
 <div class="row">
   <div class="col-lg-3">
-    <ul class="list-group">
+    <ul class="list-group" id="portal-nav">
       <li class="list-group-item">
-        <p>
-          Logged in as <strong class="username">{{ user.username }}</strong>
-        </p>
-        <form action="{% url 'ecsswebauth:saml-logout' %}" method="GET">
-          <input type="submit" value="Logout" class="btn btn-ecssweb">
-        </form>
+        <div class="row portal-nav-no-row">
+          <div class="col-9">
+            <p>
+              Logged in as <strong class="username">{{ user.username }}</strong>
+            </p>
+            <form action="{% url 'ecsswebauth:saml-logout' %}" method="GET">
+              <input type="submit" value="Logout" class="btn btn-ecssweb">
+            </form>
+          </div>
+          <div class="col-3 text-right">
+            <button class="navbar-toggler portal-nav-toggler" type="button" data-toggle="collapse" data-target=".portalNavContent" aria-controls="portalNavContent" aria-expanded="false" aria-label="Toggle portal navigation">
+              <span class="navbar-toggler-icon">
+                <i class="fas fa-bars"></i>
+              </span>
+            </button>
+          </div>
+        </div>
       </li>
       <li class="list-group-item">
         <a href="{% url 'portal:overview' %}">
@@ -58,4 +69,11 @@
     {% endblock %}
   </div>
 </div>
+{% endblock %}
+
+{% block pagescript %}
+{{ block.super }}
+<script>
+  $('#portal-nav>li:not(:first)').addClass('collapse portal-nav-collapse portalNavContent');
+</script>
 {% endblock %}
