--- a/website/templates/website/error_pages/404.html
+++ b/website/templates/website/error_pages/404.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="alert alert-danger">
   <h1>Page not found</h1>
-  <p>Got lost? The <a href="#" class="alert-link">sitemap</a> might help!</p>
+  <!--<p>Got lost? The <a href="#" class="alert-link">sitemap</a> might help!</p>-->
 </div>
 {% endblock %}
