--- a/website/templates/website/error_pages/500.html
+++ b/website/templates/website/error_pages/500.html
@@ -4,6 +4,6 @@
 <div class="alert alert-danger">
   <h1>Error</h1>
   <p>Oops, something went wrong :(</p>
-  <p>Feel free to <a href="#" class="alert-link">tell the webmaster</a> what happened.</p>
+  <p>Feel free to <a href="mailto:jc14g16@ecs.soton.ac.uk" class="alert-link">tell the webmaster</a> what happened.</p>
 </div>
 {% endblock %}
