--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -3,7 +3,7 @@
 {% block title %}Events - ECSS{% endblock title %}
 
 {% block content %}
-<section>
+<section class="container">
  <h1>Events</h1>
  <p>
   At ECSS We run events, including socials, talks from companies and more.
