--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -7,47 +7,49 @@
 {% endblock %}
 
 {% block content %}
-<section>
-  <img src="{% static 'website/images/ecss-logo-square.png' %}" alt="ECSS logo" class="logo-home">
-  <h1 class="text-center">Welcome to ECSS!</h1>
-  <p>Welcome to the University of Southampton Electronics and Computer Science (ECS) Society website.</p>
-  <p>We are a student-run society for ECS at the University of Southampton.</p>
-  <p>On this website you will find information about the society such as who we are, what we aim to do, as well as what events we are currently organising!</p>
-  <p>Still reading? You can even find out more <a href="https://society.ecs.soton.ac.uk/about/">about us</a>.</p>
-  <p>To keep up with the latest events, join the <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a>, like <a href="https://www.facebook.com/ecss.soton/">our Facebook page</a> and follow us on Twitter, <a href="https://twitter.com/ecs_society">@ECS_Society</a>.</p>
-</section>
-<!--
-<section>
-  <h2 class="text-center">Upcoming Events</h2>
-  <hr>
-  <div class="events-cards-home">
-    <div class="card event-card-home">
-      <img class="card-img-top" src="#" alt="Example event">
-      <a href="#">
-        <h5 class="card-header">
-            Example event
-        </h5>
-      </a>
-      <div class="card-body">
-        time<br>
-        location
+<div class="container">
+  <section>
+    <img src="{% static 'website/images/ecss-logo-square.png' %}" alt="ECSS logo" class="logo-home">
+    <h1 class="text-center">Welcome to ECSS!</h1>
+    <p>Welcome to the University of Southampton Electronics and Computer Science (ECS) Society website.</p>
+    <p>We are a student-run society for ECS at the University of Southampton.</p>
+    <p>On this website you will find information about the society such as who we are, what we aim to do, as well as what events we are currently organising!</p>
+    <p>Still reading? You can even find out more <a href="https://society.ecs.soton.ac.uk/about/">about us</a>.</p>
+    <p>To keep up with the latest events, join the <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a>, like <a href="https://www.facebook.com/ecss.soton/">our Facebook page</a> and follow us on Twitter, <a href="https://twitter.com/ecs_society">@ECS_Society</a>.</p>
+  </section>
+  <!--
+  <section>
+    <h2 class="text-center">Upcoming Events</h2>
+    <hr>
+    <div class="events-cards-home">
+      <div class="card event-card-home">
+        <img class="card-img-top" src="#" alt="Example event">
+        <a href="#">
+          <h5 class="card-header">
+              Example event
+          </h5>
+        </a>
+        <div class="card-body">
+          time<br>
+          location
+        </div>
       </div>
     </div>
-  </div>
-  <p>Find out more about our events on <a href="#">our events page</a>.</p>
-</section>
--->
-<section>
-  <h2 class="text-center">Our Gold Sponsors</h2>
-  <hr>
-  <div class="sponsors-logos-home">
-    <a href="https://www.jpmorgan.com/" class="sponsor-link-logo-home" title="J.P. Morgan" aria-label="J.P. Morgan">
-      <img src="{% static 'website/content/sponsors-logos/jpmorgan.jpg' %}" alt="J.P. Morgan logo" class="sponsor-logo-home" aria-hidden="true">
-    </a>
-    <a href="https://www.talent.io/" class="sponsor-link-logo-home" title="talent.io" aria-label="talent.io">
-      <img src="{% static 'website/content/sponsors-logos/talentio.png' %}" alt="talent.io logo" class="sponsor-logo-home" aria-hidden="true">
-    </a>
-  </div>
-  <p>Find out more about our sponsors on <a href="https://society.ecs.soton.ac.uk/sponsors/">our sponsors page</a>.</p>
-</section>
+    <p>Find out more about our events on <a href="#">our events page</a>.</p>
+  </section>
+  -->
+  <section>
+    <h2 class="text-center">Our Gold Sponsors</h2>
+    <hr>
+    <div class="sponsors-logos-home">
+      <a href="https://www.jpmorgan.com/" class="sponsor-link-logo-home" title="J.P. Morgan" aria-label="J.P. Morgan">
+        <img src="{% static 'website/content/sponsors-logos/jpmorgan.jpg' %}" alt="J.P. Morgan logo" class="sponsor-logo-home" aria-hidden="true">
+      </a>
+      <a href="https://www.talent.io/" class="sponsor-link-logo-home" title="talent.io" aria-label="talent.io">
+        <img src="{% static 'website/content/sponsors-logos/talentio.png' %}" alt="talent.io logo" class="sponsor-logo-home" aria-hidden="true">
+      </a>
+    </div>
+    <p>Find out more about our sponsors on <a href="https://society.ecs.soton.ac.uk/sponsors/">our sponsors page</a>.</p>
+  </section>
+</div>
 {% endblock %}
